stoping links overflowing temporarily

--- a/css/styles.css
+++ b/css/styles.css
@@ -222,9 +222,7 @@ transform: rotate(360deg);
 }
 .formContainer{
     height:100%;
-    border-bottom:2px solid #2980b9;
     margin:62px 0px;
-    padding-bottom:15px;
     color:#fff;
     background-color:#000;
 }
@@ -458,7 +456,7 @@ transform: rotate(360deg);
 
 /*Artists Page*/
 .topDiv{
-    width:30%;
+    width:300px;
     height:300px;
     position: relative;
     margin:10px;
@@ -488,6 +486,7 @@ transform: rotate(360deg);
     line-height:250px;
     opacity: 0;
     position: relative;
+    overflow: hidden;
 }
 
 .artistHoverLinks:hover{color:#fff;
